--- a/templates/make_donation.html
+++ b/templates/make_donation.html
@@ -16,6 +16,10 @@
                     <label for="donation_last_name" class="form-label">Last Name</label>
                     <input type="text" name="last_name" class="form-control" id="donation_last_name">
                 </div>
+				<div class="mb-3">
+                    <label for="email-address" class="form-label">Email</label>
+                    <input type="email" name="email" class="form-control" id="email-address">
+                </div>
                 <div class="mb-3">
                     <label for="donation_phone" class="form-label">Telephone E.g +2347081234567</label>
                     <input type="tel" name="telephone" class="form-control" id="donation_phone">
