--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -4,7 +4,7 @@
 
 
 <div class="container mb-2">
-    {% if user.is_worker %}
+    {% if user.is_admin %}
     <h4 class="text text-left text-info pb-4">
         <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal"
         >Add Image
