--- a/templates/search.html
+++ b/templates/search.html
@@ -9,8 +9,16 @@
         {% if services %}
         {% for service in services %}
         <div class="col-lg-4 col-md-6 col-sm-12 pb-4">
-            <div class="card text-white bg-info h-100 p-4">
-                <img src="{% static 'assets/images/blog/banner.jpg' %}" class="card-img-top" alt="{{service.name}}">
+            <div class="card text-white h-100 p-4">
+                {% if service.name == 'Tuesday Bible Study' %}
+                <img src="{% static 'assets/images/blog/tuesday.jpg' %}" class="card-img-top" alt="{{service.name}}">
+				{% if service.name == 'Thursday Revival Service' %}
+                <img src="{% static 'assets/images/blog/thursday.jpg' %}" class="card-img-top" alt="{{service.name}}">
+				{% if service.name == 'Sunday ThanksGiving Service' %}
+                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" alt="{{service.name}}">
+				{% if service.name == 'Sunday Service' %}
+                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" alt="{{service.name}}">
+				{% endif %}
                 <div class="card-body">
                     <h5 class="text text-center">{{service.name}}</h5>
                 </div>
@@ -21,9 +29,7 @@
                     <li class="list-group-item">
                         <a href="{% url 'view_service' pk=service.pk %}">View Service</a>
                     </li>
-                    {% if user.is_worker %}
                     <li class="list-group-item"><a href="{% url 'view_gallery' pk=service.pk %}">View Gallery</a></li>
-                    {% endif %}
                 </ul>
             </div>
         </div>
