--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
             <img src="{% static 'assets/images/blog/sundayservice.jpg' %}" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="{% static 'assets/images/blog/thursday.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'assets/images/blog/BibleStudy.jpg' %}" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
             <img src="{% static 'assets/images/blog/revival.jpg' %}" class="d-block w-100" alt="...">
@@ -96,13 +96,13 @@
         <div class="col-lg-4 col-md-6 col-sm-12 pb-4">
             <div class="card text-white h-100 p-4">
 				{% if service.name == 'Tuesday Bible Study' %}
-                <img src="{% static 'assets/images/blog/tuesday.jpg' %}" class="card-img-top" alt="{{service.name}}">
+                <img src="{% static 'assets/images/blog/tuesday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
 				{% if service.name == 'Thursday Revival Service' %}
-                <img src="{% static 'assets/images/blog/thursday.jpg' %}" class="card-img-top" alt="{{service.name}}">
+                <img src="{% static 'assets/images/blog/thursday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
 				{% if service.name == 'Sunday ThanksGiving Service' %}
-                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" alt="{{service.name}}">
+                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
 				{% if service.name == 'Sunday Service' %}
-                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" alt="{{service.name}}">
+                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
 				{% endif %}
                 <div class="card-body">
                     <h5 class="text text-center">{{service.name}}</h5>
