--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-{% load cloudinary_static %}
+{% load static %}
 <html lang="en">
 <head>
     <!-- Required meta tags -->
@@ -15,7 +15,7 @@
 <body style="background-color:#F9E6D6">
 <nav class="navbar navbar-expand-lg navbar-light bg-info mb-2">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% cloudinary_static 'assets/images/blog/Rccg_logo.png' %}" height=100
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/images/blog/Rccg_logo.png' %}" height=100
                                               width=100
                                               alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
