--- a/templates/all_services.html
+++ b/templates/all_services.html
@@ -9,7 +9,7 @@
         {% if services %}
         {% for service in services %}
         <div class="col-lg-4 col-md-6 col-sm-12 pb-4">
-            <div class="card text-white h-100 p-4">
+            <div class="card text-info h-100 p-4">
                 {% if service.name == 'Tuesday Bible Study' %}
                 <img src="{% static 'assets/images/blog/tuesday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
 				{% elif service.name == 'Thursday Revival Service' %}
