--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,8 @@
 <body style="background-color:#F9E6D6">
 <nav class="navbar navbar-expand-lg navbar-light bg-info mb-2">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/images/blog/Rccg_logo.png' %}" height=100
-                                              width=100
-                                              alt=""></a>
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/images/blog/Rccg_logo.png' %}" height=70
+                                              width=65                                            alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
