--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -15,7 +15,7 @@
         {% if photos %}
         {% for photo in photos %}
         <div class="col-lg-4 col-md-6 col-sm-12 pb-4">
-            <img src="{{photo.image.url}}" height=300 width=300 alt="" class="img-thumbnail"/>
+            <img src="{{photo.image.url}}" alt="" class="img-thumbnail"/>
         </div>
         {% endfor %}
         {% else %}
