--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <h3>Welcome {{user.first_name}}</h3>
+					<a class="nav-link active" aria-current="page" href="#">Welcome <h3>Welcome {{user.first_name}}</h3></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
