--- a/templates/tithes.html
+++ b/templates/tithes.html
@@ -3,44 +3,57 @@
 {% load static %}
 
 
-<div class="container">
+<div class="container mb-2">
     {% if tithes %}
-        <table class="table table-info table-striped mb-5">
-            <thead>
-            <tr>
-                <th>Date</th>
-                <th>Full Name</th>
-                <th>Reference</th>
-                <th>Amount</th>
-                <th>Status</th>
-            </tr>
-            </thead>
-            <tbody class="card_color-bg">
-            {% for tithe in tithes %}
-            <tr>
-                <td>#{{tithe.date}}</td>
-                <td>{{tithe.user.get_full_name}}</td>
-                <td>{{tithe.reference}}</td>
-                <td>{{tithe.amount}}</td>
-                <td>{{tithe.status}}</td>
-            </tr>
-            {% endfor %}
-
-            </tbody>
-        </table>
-    {% else %}
-    <div class="row justify-content-md-center">
-            <div class="col-md-6 mt-5">
-
-                <img src="{% static 'assets/images/blog/404.jpg' %}" alt="" class="img-thumbnail"/>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <canvas id="tithe-pie-chart" data-url="{% url 'individual_tithe_chart' %}"></canvas>
+            </div>
+            <div class="col-6">
+                <canvas id="tithe-bar-chart" data-url="{% url 'individual_tithe_chart' %}"></canvas>
             </div>
         </div>
+
+
+    </div>
+
+    <table class="table table-responsive table-striped mb-5">
+        <thead>
+        <tr>
+            <th>Date</th>
+            <th>Full Name</th>
+            <th>Month</th>
+            <th>Amount</th>
+            <th>Status</th>
+        </tr>
+        </thead>
+        <tbody class="card_color-bg">
+        {% for tithe in tithes %}
+        <tr>
+            <td>{{tithe.date}}</td>
+            <td>{{tithe.user.get_full_name}}</td>
+            <td>{{tithe.month}}</td>
+            <td>₦{{tithe.amount}}.00</td>
+            <td>{{tithe.status}}</td>
+        </tr>
+        {% endfor %}
+
+        </tbody>
+    </table>
+    {% else %}
+    <div class="row justify-content-md-center">
+        <div class="col-md-6 mt-5">
+
+            <img src="{% static 'assets/images/blog/404.jpg' %}" alt="" class="img-thumbnail"/>
+        </div>
+    </div>
     {% endif %}
 
-     {% if tithes %}
+    {% if tithes %}
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
-            {% if tithesservices.has_previous %}
+            {% if tithes.has_previous %}
             <li class="page-item">
                 <a class="page-link" href="?page={{ tithes.previous_page_number }}">Previous</a>
             </li>
