--- a/templates/view_service.html
+++ b/templates/view_service.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 
 <div class="container">
     <div class="row justify-content-md-center">
@@ -62,7 +63,7 @@
                 </div>
             </div>
         </div>
-            <a href="#" class="btn btn-info mt-5" onclick="goBack()">Back to Services</a>
+            <a href="#" class="btn btn-info mt-5" onclick="goBack()">Back</a>
     </div>
 </div>
 
