--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,19 @@
 <!doctype html>
 {% load static %}
 <html lang="en">
+{% load pwa %}
 <head>
+    {% progressive_web_app_meta %}
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="description" content="Redeemed Christian Church of God(Dominion Sanctuary)">
+    <meta name="keywords" content="">
+    <link rel="shortcut icon" href="{% static 'assets/images/blog/Rccg_logo.png' %}">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,11 +21,13 @@
 
     <title>Redeemed Christian Church of God, Dominion Sanctuary Hqtrs</title>
 </head>
-<body style="background-color:#F9E6D6">
+<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-info mb-2">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/images/blog/Rccg_logo.png' %}" height=70
-                                              width=65                                            alt=""></a>
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/images/blog/Rccg_logo.png' %}"
+                                                             height=65
+                                                             width=65
+                                                             alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Welcome {{user.first_name}}</a>
+                    <a class="nav-link active" aria-current="page" href="#">{{user.first_name }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
@@ -32,33 +43,46 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'make_donation' %}">Donate</a>
                 </li>
-                {% if user.is_authenticated and user.is_worker %}
+                {% if user.is_authenticated and user.is_admin %}
                 <li class="nav-item">
                     <a class="nav-link active" href="{% url 'create_service' %}">Add Service</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown5" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Register
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown5">
+                        <li><a class="dropdown-item" href="{% url 'register_worker' %}">Register Worker/Pastor</a></li>
+                        <li><a class="dropdown-item" href="{% url 'all_users' %}">All Members</a></li>
+                    </ul>
                 </li>
                 {% endif %}
                 {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown1" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Tithe
+                        Others
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
                         <li><a class="dropdown-item" href="{% url 'pay_tithe' %}">Pay Tithe</a></li>
                         <li><a class="dropdown-item" href="{% url 'my_tithes' %}">View my Tithes</a></li>
-                        {% if user.is_pastor %}
+                        {% if user.is_admin %}
+                        <li><a class="dropdown-item" href="{% url 'all_tithes' %}">View all tithes</a></li>
+
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="{% url 'all_tithes' %}">View all tithes</a></li>
+                        <li><a class="dropdown-item" href="{% url 'all_donations' %}">View all Donations</a></li>
                         {% endif %}
                     </ul>
                 </li>
                 {% endif %}
             </ul>
-            <form class="d-flex" method="post" action="{% url 'search' %}">
-			{% csrf_token %}
-                <input class="form-control me-2" type="search" name="search_query" placeholder="Search" aria-label="Search">
+            <form class="d-flex" method="get" action="{% url 'search' %}">
+                {% csrf_token %}
+                <input class="form-control me-2" type="search" name="search_query" placeholder="Search"
+                       aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
             {% if user.is_authenticated %}
@@ -71,161 +95,212 @@
 </nav>
 
 
+{% block content %}
 
-    {% block content %}
+{% endblock %}
+<div class="container mb-5">
 
-    {% endblock %}
-
+</div>
 
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 <script>
       function goBack() {
          window.history.back();
       }
-   </script>
+</script>
+
+<script>
+    $(function () {
+
+      var $titheChart = $("#tithe-pie-chart");
+      $.ajax({
+        url: $titheChart.data("url"),
+        success: function (data) {
+
+          var ctx = $titheChart[0].getContext("2d");
+
+          new Chart(ctx, {
+            type: 'pie',
+            data: {
+              labels: data.labels,
+              datasets: [{
+                label: 'Amount',
+                backgroundColor: 'blue',
+                data: data.data
+              }]
+            },
+            options: {
+              responsive: true,
+              legend: {
+                position: 'top',
+              },
+              title: {
+                display: true,
+                text: 'Tithe Pie Chart'
+              }
+            }
+          });
+
+        }
+      });
+
+    });
+</script>
+<script>
+    $(function () {
+
+      var $titheChart = $("#tithe-bar-chart");
+      $.ajax({
+        url: $titheChart.data("url"),
+        success: function (data) {
+
+          var ctx = $titheChart[0].getContext("2d");
+
+          new Chart(ctx, {
+            type: 'bar',
+            data: {
+              labels: data.labels,
+              datasets: [{
+                label: 'Amount',
+                backgroundColor: 'blue',
+                data: data.data
+              }]
+            },
+            options: {
+              responsive: true,
+              legend: {
+                position: 'top',
+              },
+              title: {
+                display: true,
+                text: 'Tithe Bar Chart'
+              }
+            }
+          });
+
+        }
+      });
+
+    });
+</script>
 
 <!-- Footer -->
-<footer class="page-footer font-small bg-info lighten-5">
-
-  <div style="background-color: #F9E6D6">
-    <div class="container mt-5">
-
-      <!-- Grid row-->
-      <div class="row py-4 d-flex align-items-center">
+<footer class="page-footer font-small bg-info mt-5">
+    <!-- Grid row-->
+    <div class="row py-4 d-flex align-items-center">
 
         <!-- Grid column -->
         <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <h6 class="mb-0"></h6>
+            <h6 class="mb-0"></h6>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
         <div class="col-md-6 col-lg-7 text-center text-md-right">
 
-          <!-- Facebook -->
-          <a class="fb-ic">
-              <i class="bi bi-facebook mr-4"></i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-4"> </i>
-          </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text"> </i>
-          </a>
 
         </div>
         <!-- Grid column -->
 
-      </div>
-      <!-- Grid row-->
+    </div>
+    <!-- Grid row-->
+
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left mt-3">
+        <!-- Grid row -->
+        <div class="row mt-3 dark-grey-text">
+            <!-- Grid column -->
+            <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
+                <!-- Content -->
+                <h6 class="text-uppercase font-weight-bold">RCCG(Dominion Sanctuary)</h6>
+                <p>The Redeemed Christian Church of God is overseen by our Father in the Lord, Pastor E.A Adeboye. Our
+                    Area Hqtrs is under the tutelage of Pastor Henry</p>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                <!-- Links -->
+                <h6 class="text-uppercase font-weight-bold">About us</h6>
+                <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>
+                    <a class="dark-grey-text" href="https://www.rccg.org/our-history/" target="_blank">Our History</a>
+                </p>
+                <p>
+                    <a class="dark-grey-text" href="https://www.rccg.org/our-beliefs/" target="_blank">Our Belief</a>
+                </p>
+                <p>
+                    <a class="dark-grey-text" href="https://www.rccg.org/mission-and-vision/" target="_blank">Our
+                        Mission</a>
+                </p>
+                <p>
+                    <a class="dark-grey-text" href="https://www.rccg.org/our-structure/#!" target="_blank">Our
+                        structure</a>
+                </p>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                <!-- Links -->
+                <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+                <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>
+                    <a class="dark-grey-text" href="https://www.rccg.org/media-resources/" target="_blank">Media
+                        Resources</a>
+                </p>
+                <p>
+                    <a class="dark-grey-text" href="https://run.edu.ng/usite/" target="_blank">Redeemers University</a>
+                </p>
+                <p>
+                    <a class="dark-grey-text" href="https://openheavensplus.com/" target="_blank">Open Heavens</a>
+                </p>
+                <p>
+                    <a class="dark-grey-text" href="#!">Help</a>
+                </p>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+                <!-- Links -->
+                <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>
+                    <i class="fas fa-home mr-3"></i> 4, Church Avenue,Ori Okuta.Ikorodu</p>
+                <p>
+                    <i class="fas fa-envelope mr-3"></i> pastor@rccgdom.com.ng</p>
+                <p>
+                    <i class="fas fa-phone mr-3"></i> +234 803 394 9298</p>
+                <p>
+                    <i class="fas fa-print mr-3"></i> +234 803 394 9298</p>
+
+            </div>
+            <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
 
     </div>
-  </div>
+    <!-- Footer Links -->
 
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left mt-5">
-
-    <!-- Grid row -->
-    <div class="row mt-3 dark-grey-text">
-
-      <!-- Grid column -->
-      <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
-
-        <!-- Content -->
-        <h6 class="text-uppercase font-weight-bold">RCCG(Dominion Sanctuary)</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>The Redeemed Christian Church of God is overseen by our Father in the Lord, Pastor E.A Adeboye. Our Area Hqtrs is under the tutelage of Pastor Adekunle</p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">About us</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/our-history/" target="_blank">Our History</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/our-beliefs/" target="_blank">Our Belief</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/mission-and-vision/" target="_blank">Our Mission</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/our-structure/#!" target="_blank">Our structure</a>
-        </p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/media-resources/">Media Resources</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Become an Affiliate</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Shipping Rates</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Help</a>
-        </p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-        <p>
-          <i class="fas fa-envelope mr-3"></i> info@example.com</p>
-        <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-        <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-
-      </div>
-      <!-- Grid column -->
-
+    <!-- Copyright -->
+    <div class="footer-copyright text-center text-black-50 py-3">© 2020 Copyright:
+        <a class="dark-grey-text" href="#"> Redeemed Christian Church of God(Dominion Sanctuary)</a>
     </div>
-    <!-- Grid row -->
-
-  </div>
-  <!-- Footer Links -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center text-black-50 py-3">© 2020 Copyright:
-    <a class="dark-grey-text" href="#"> Redeemed Christian Church of God(Dominion Sanctuary)</a>
-  </div>
-  <!-- Copyright -->
+    <!-- Copyright -->
 
 </footer>
 <!-- Footer -->
