--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,6 @@
-<!doctype html>
+{% extends 'base.html' %}
+{% block content %}
 {% load static %}
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Redeemed Christian Church of God, Dominion Sanctuary Hqtrs</title>
-</head>
-<body style="background-color:#F9E6D6">
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/images/blog/Rccg_logo.png' %}" height=70
-                                              width=65
-                                              alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Welcome {{user.first_name}}</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'make_donation' %}">Donate</a>
-                </li>
-                {% if user.is_authenticated and user.is_worker %}
-                <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'create_service' %}">Add Service</a>
-                </li>
-                {% endif %}
-                {% if user.is_authenticated %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
-                        Tithe
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{% url 'pay_tithe' %}">Pay Tithe</a></li>
-                        <li><a class="dropdown-item" href="{% url 'my_tithes' %}">View my Tithes</a></li>
-                    </ul>
-                </li>
-                {% endif %}
-            </ul>
-            <form class="d-flex" method="post" action="{% url 'search' %}">
-			{% csrf_token %}
-                <input class="form-control me-2" type="search" name="search_query" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-            {% if user.is_authenticated %}
-            <a class="btn btn-outline-success ms-2" href="{% url 'logout' %}">Logout</a>
-            {% else %}
-            <a class="btn btn-outline-success ms-2" href="{% url 'login' %}">Login/Register</a>
-            {% endif %}
-        </div>
-    </div>
-</nav>
 
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
@@ -89,36 +26,92 @@
 
 
 <div class="container">
-    <h4 class="text text-center text-info pb-2">Welcome to Dominion Sanctuary Area Hqtrs</h4>
+    <h4 class="text text-center text-secondary pb-2">Welcome to Dominion Sanctuary Area Hqtrs</h4>
     <div class="row ">
         {% if services %}
         {% for service in services %}
         <div class="col-lg-4 col-md-6 col-sm-12 pb-4">
-            <div class="card text-info h-100 p-4">
-				{% if service.name == 'Tuesday Bible Study' %}
-                <img src="{% static 'assets/images/blog/tuesday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
-				{% elif service.name == 'Thursday Revival Service' %}
-                <img src="{% static 'assets/images/blog/thursday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
-				{% elif service.name == 'Sunday ThanksGiving Service' %}
-                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
-				{% elif service.name == 'Sunday Service' %}
-                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
-				{% elif service.name == 'Sunday Special Service' %}
-                <img src="{% static 'assets/images/blog/sunday.jpg' %}" class="card-img-top" height="200" alt="{{service.name}}">
-				{% endif %}
+            {% if service.name == 'Tuesday Bible Study' %}
+            <div class="card text-white bg-secondary mb-3">
+                <div class="card-header">{{service.date}}</div>
                 <div class="card-body">
-                    <h5 class="text text-center">{{service.name}}</h5>
+                    <h5 class="card-title">{{service.name}}</h5>
+                    <div class="card-text">
+                        <a class="btn btn-primary" href="{% url 'view_service' pk=service.pk %}"
+                           data-bs-toggle="tooltip" data-bs-placement="top" title="View Service"><i
+                                class="bi bi-eye-fill"></i></a>
+                        <a class="btn btn-danger" href="{% url 'view_praise_worship' pk=service.pk %}"
+                           data-bs-toggle="tooltip"
+                           data-bs-placement="top" title="View Worship"><i
+                                class="bi bi-eye-fill"></i></a>
+
+                        <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
+                           data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
+                                class="bi bi-eye-fill"></i></a>
+                    </div>
                 </div>
-                <ul class="list-group ">
-                    <li class="list-group-item">
-                        <h4>{{service.date}}</h4>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="{% url 'view_service' pk=service.pk %}">View Service</a>
-                    </li>
-                    <li class="list-group-item"><a href="{% url 'view_gallery' pk=service.pk %}">View Gallery</a></li>
-                </ul>
             </div>
+            {% elif service.name == 'Thursday Revival Service' %}
+            <div class="card text-white bg-success mb-3">
+                <div class="card-header">{{service.date}}</div>
+                <div class="card-body">
+                    <h5 class="card-title">{{service.name}}</h5>
+                    <div class="card-text">
+                        <a class="btn btn-primary" href="{% url 'view_service' pk=service.pk %}"
+                           data-bs-toggle="tooltip" data-bs-placement="top" title="View Service"><i
+                                class="bi bi-eye-fill"></i></a>
+                        <a class="btn btn-danger" href="{% url 'view_praise_worship' pk=service.pk %}"
+                           data-bs-toggle="tooltip"
+                           data-bs-placement="top" title="View Worship"><i
+                                class="bi bi-eye-fill"></i></a>
+
+                        <a class="btn btn-warning" href="{% url 'view_gallery' pk=service.pk %}"
+                           data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
+                                class="bi bi-eye-fill"></i></a>
+                    </div>
+                </div>
+            </div>
+            {% elif service.name == 'Sunday ThanksGiving Service' %}
+            <div class="card text-white bg-danger mb-3">
+                <div class="card-header">{{service.date}}</div>
+                <div class="card-body">
+                    <h5 class="card-title">{{service.name}}</h5>
+                    <div class="card-text">
+                        <a class="btn btn-primary" href="{% url 'view_service' pk=service.pk %}"
+                           data-bs-toggle="tooltip" data-bs-placement="top" title="View Service"><i
+                                class="bi bi-eye-fill"></i></a>
+                        <a class="btn btn-warning" href="{% url 'view_praise_worship' pk=service.pk %}"
+                           data-bs-toggle="tooltip"
+                           data-bs-placement="top" title="View Worship"><i
+                                class="bi bi-eye-fill"></i></a>
+
+                        <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
+                           data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
+                                class="bi bi-eye-fill"></i></a>
+                    </div>
+                </div>
+            </div>
+            {% elif service.name == 'Sunday Service' %}
+            <div class="card text-dark bg-warning mb-3">
+                <div class="card-header">{{service.date}}</div>
+                <div class="card-body">
+                    <h5 class="card-title">{{service.name}}</h5>
+                    <div class="card-text">
+                        <a class="btn btn-primary" href="{% url 'view_service' pk=service.pk %}"
+                           data-bs-toggle="tooltip" data-bs-placement="top" title="View Service"><i
+                                class="bi bi-eye-fill"></i></a>
+                        <a class="btn btn-danger" href="{% url 'view_praise_worship' pk=service.pk %}"
+                           data-bs-toggle="tooltip"
+                           data-bs-placement="top" title="View Service"><i
+                                class="bi bi-eye-fill"></i></a>
+
+                        <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
+                           data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
+                                class="bi bi-eye-fill"></i></a>
+                    </div>
+                </div>
+            </div>
+            {%endif %}
         </div>
         {% endfor %}
         {% else %}
@@ -130,160 +123,12 @@
         </div>
         {% endif %}
     </div>
-<div class="d-grid gap-2">
-  <a class="btn btn-info" href="{% url 'all_services' %}">View More Services</a>
-</div>
-</div>
-
-<!-- Footer -->
-<!-- Footer -->
-<footer class="page-footer font-small bg-info lighten-5">
-
-  <div style="background-color: #F9E6D6" >
-    <div class="container mt-5">
-
-      <!-- Grid row-->
-      <div class="row py-4 d-flex align-items-center">
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <h6 class="mb-0"></h6>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
-
-          <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="bi bi-facebook white-text mr-4"></i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-4"> </i>
-          </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text"> </i>
-          </a>
-
-        </div>
-        <!-- Grid column -->
-
-      </div>
-      <!-- Grid row-->
+    <div class="d-grid gap-2 col-6 mx-auto mb-5">
+        <a class="btn btn-dark" href="{% url 'all_services' %}">View More Services</a>
+    </div>
+    <div class="mb-5">
 
     </div>
-  </div>
+</div>
 
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left mt-5">
-
-    <!-- Grid row -->
-    <div class="row mt-3 dark-grey-text">
-
-      <!-- Grid column -->
-      <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
-
-        <!-- Content -->
-        <h6 class="text-uppercase font-weight-bold">RCCG(Dominion Sanctuary)</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>The Redeemed Christian Church of God is overseen by our Father in the Lord, Pastor E.A Adeboye. Our Area Hqtrs is under the tutelage of Pastor Adekunle</p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">About us</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/our-history/" target="_blank">Our History</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/our-beliefs/" target="_blank">Our Belief</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/mission-and-vision/" target="_blank">Our Mission</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/our-structure/#!" target="_blank">Our structure</a>
-        </p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a class="dark-grey-text" href="https://www.rccg.org/media-resources/">Media Resources</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Become an Affiliate</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Shipping Rates</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Help</a>
-        </p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-        <p>
-          <i class="fas fa-envelope mr-3"></i> info@example.com</p>
-        <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-        <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-
-      </div>
-      <!-- Grid column -->
-
-    </div>
-    <!-- Grid row -->
-
-  </div>
-  <!-- Footer Links -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center text-black-50 py-3">© 2021 Copyright:
-    <a class="dark-grey-text" href="#"> Redeemed Christian Church of God(Dominion Sanctuary)</a>
-  </div>
-  <!-- Copyright -->
-
-</footer>
-<!-- Footer -->
-
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-
-</body>
-</html>
+{% endblock %}
