fix upload issue

--- a/templates/all_services.html
+++ b/templates/all_services.html
@@ -24,7 +24,7 @@
 
                         <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
-                                class="bi bi-eye-fill"></i></a>
+                                class="bi bi-images"></i></a>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
 
                         <a class="btn btn-warning" href="{% url 'view_gallery' pk=service.pk %}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
-                                class="bi bi-eye-fill"></i></a>
+                                class="bi bi-images"></i></a>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 
                         <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
-                                class="bi bi-eye-fill"></i></a>
+                                class="bi bi-images"></i></a>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
 
                         <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
-                                class="bi bi-eye-fill"></i></a>
+                                class="bi bi-images"></i></a>
                     </div>
                 </div>
             </div>
