--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 
                         <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
-                                class="bi bi-eye-fill"></i></a>
+                                class="bi bi-images"></i></a>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
 
                         <a class="btn btn-warning" href="{% url 'view_gallery' pk=service.pk %}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
-                                class="bi bi-eye-fill"></i></a>
+                                class="bi bi-images"></i></a>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
 
                         <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
-                                class="bi bi-eye-fill"></i></a>
+                                class="bi bi-images"></i></a>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
 
                         <a class="btn btn-success" href="{% url 'view_gallery' pk=service.pk %}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="View Gallery"><i
-                                class="bi bi-eye-fill"></i></a>
+                                class="bi bi-images"></i></a>
                     </div>
                 </div>
             </div>
