--- a/templates/view_service.html
+++ b/templates/view_service.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-md-center">
         <video controls width="620">
 
-            <source src="{{service.video.url}}"
+            <source src="{{service.video}}"
                     type="video/mp4">
 
             Sorry, your browser doesn't support embedded videos.
